src/objects/Lead.object
<CustomObject>
    <fields>
        <fullName>CustomL__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Einstein - Custom Predictive Factors?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Indicator_1_Positive__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Einstein - Indicator 1 Positive</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Indicator_1_Strength__c</fullName>
        <label>Einstein - Indicator 1 Strength</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Indicator_2_Positive__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Einstein - Indicator 2 Positive</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Indicator_2_Strength__c</fullName>
        <label>Einstein - Indicator 2 Strength</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Indicator_3_Positive__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Einstein - Indicator 3 Positive</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Indicator_3_Strength__c</fullName>
        <label>Einstein - Indicator 3 Strength</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Top_Predictive_1__c</fullName>
        <label>Einstein - Top Predictive 1</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Top_Predictive_2__c</fullName>
        <label>Einstein - Top Predictive 2</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Top_Predictive_3__c</fullName>
        <label>Einstein - Top Predictive 3</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Top_Predictive_Result_1__c</fullName>
        <label>Einstein - Top Predictive Result 1</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Top_Predictive_Result_2__c</fullName>
        <label>Einstein - Top Predictive Result 2</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Top_Predictive_Result_3__c</fullName>
        <label>Einstein - Top Predictive Result 3</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>escore__c</fullName>
        <label>Einstein - Lead Score</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>55</fullName>
                </value>
                <value>
                    <fullName>70</fullName>
                </value>
                <value>
                    <fullName>85</fullName>
                </value>
                <value>
                    <fullName>92</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
</CustomObject>